<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/im_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/logo_margin"

        android:src="@drawable/ic_logo"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_log_in_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/log_in_margin"
        android:textAlignment="center"

        android:text="@string/log_in_account"
        style="@style/headline_2"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/im_logo"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_fields_margin"
        android:textAlignment="viewStart"

        android:text="@string/phone"
        style="@style/button"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_log_in_account"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/phone_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="@dimen/between_label_input_margin"

        android:background="@drawable/rounded_corner_transparent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_phone">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_phone"
            style="@style/NoUnderlineEditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"


            android:layout_marginEnd="16dp"
            android:hint="+7"
            android:inputType="phone"

            app:layout_constraintEnd_toStartOf="@+id/b_clear_phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/b_clear_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:src="@drawable/ic_clear"
            android:background="@null"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_fields_margin"
        android:textAlignment="viewStart"

        android:text="@string/password"
        style="@style/button"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_block"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/password_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/between_label_input_margin"
        android:padding="10dp"

        android:background="@drawable/rounded_corner_transparent"

        app:layout_constraintTop_toBottomOf="@+id/tv_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"

            android:hint="@string/enter_passwd"
            android:inputType="textPassword"
            style="@style/NoUnderlineEditTextStyle"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/b_view_passwd"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/b_view_passwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:src="@drawable/ic_eye_open_gray"
            android:background="@null"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/et_password"
            app:layout_constraintBottom_toBottomOf="@+id/et_password"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        style="@style/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:background="@drawable/rounded_corner"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textAllCaps="false"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>