<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_dimen_16"

        android:outlineSpotShadowColor="@color/blackText"
        android:background="@color/white"
        android:elevation="8dp"
        tools:ignore="UnusedAttribute">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/toolbar_b_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginEnd="@dimen/default_dimen_16"

            android:clickable="true"
            android:background="@drawable/ripple"
            android:src="@drawable/ic_arrow"
            android:focusable="true" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"

            style="@style/headline_3"/>
    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_dimen_16"
        android:layout_marginHorizontal="@dimen/default_dimen_16"

        style="@style/body_2"
        android:text="@string/date_example"
        android:textColor="@color/gray"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="@dimen/default_dimen_16"

        style="@style/headline_3"
        android:text="@string/title_example"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/im_image"
        android:layout_width="match_parent"
        android:layout_height="216dp"
        android:layout_marginHorizontal="@dimen/default_dimen_16"
        android:layout_marginVertical="32dp"

        android:adjustViewBounds="true"
        android:src="@mipmap/ic_launcher"

        android:layout_gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_dimen_16"

        style="@style/body_1"
        android:text="@string/description_example"
        android:textColor="@color/gray_dark_text"/>



</androidx.appcompat.widget.LinearLayoutCompat>